--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <div class="hero-buttons">
                 <a href="menu.html" class="btn-main primary"><i class="fa-solid fa-bag-shopping"></i> Ordina e Ritira</a>
                 <button onclick="openDeliveryModal()" class="btn-main primary"><i class="fa-solid fa-motorcycle"></i> Ordina a Domicilio</button>
-                <a href="https://67ape8dslvci9fpzpmngl8dwcekglxg0.forms.pienissimo.pro/info-client" target="_blank" class="btn-main secondary"><i class="fa-solid fa-calendar-check"></i> Prenota un Tavolo</a>
+                <a href="https://67ape8dslvci9fpzpmngl8dwcekglxg0.forms.pienissimo.pro/?id=4NuGYl" target="_blank" class="btn-main secondary"><i class="fa-solid fa-calendar-check"></i> Prenota un Tavolo</a>
                 <a href="/torbmenu.pdf" target="_blank" class="btn-main secondary"><i class="fa-solid fa-book-open"></i> Guarda il Menù</a>
             </div>
         </div>
